--- a/src/app/features/auth/pages/register/register.component.html
+++ b/src/app/features/auth/pages/register/register.component.html
@@ -5,7 +5,13 @@
         class="text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-600 to-purple-600 drop-shadow-md p-3">
         Sign Up!
       </h1>
-      <img loading="lazy" class="w-20 md:w-25" src="../../../../../assets/IMG.png" alt="logo">
+      <svg width="80px" height="80px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="12" cy="9" r="3" stroke="#1C274C" stroke-width="1.5"/>
+        <path d="M17.9691 20C17.81 17.1085 16.9247 15 11.9999 15C7.07521 15 6.18991 17.1085 6.03076 20"
+          stroke="#1C274C" stroke-width="1.5" stroke-linecap="round"/>
+        <path d="M7 3.33782C8.47087 2.48697 10.1786 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 10.1786 2.48697 8.47087 3.33782 7"
+          stroke="#1C274C" stroke-width="1.5" stroke-linecap="round"/>
+      </svg>
     </header>
     <div class="mb-4">
       <app-register-form></app-register-form>
